elk-stack/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elk-stack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kibana.xxpisal.online
      secretName: kibana-xxpisal-online-tls
  rules:
    - host: kibana.xxpisal.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elk-stack-kibana
                port:
                  number: 5601
